added dragons lair and graveyard locations

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ html,
 }
 
 body {
-    background-color: lightgrey;
+    background-color: #dddddd;
 }
 
 .main-view {
@@ -32,6 +32,7 @@ body {
 
 #canvas {
     /* cursor: none; */
+    border: 1px solid black;
     position: relative;
 }
 
